# Grapycal

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CNAME  Dockerfile  Dockerfile.frontend  Dockerfile.workspace  HowToBuild.md  LICENSE  README.md  build.bat  dev_install.bat  docker_cmd.sh  forward.bat  genindex.html  index.html  l1.py  objects.inv  publish.bat  py-modindex.html  ruff.toml  search.html  searchindex.js  test_build.bat  test_build_pypi.bat
.github/: FUNDING.yml
autoapi/: index.html
backend/: .gitignore  CHANGELOG.md  README.md  pre_bump.bat  pyproject.toml  setup.cfg  workspace.json
backend/config/: default.yaml
backend/docs/: classes.dot  packages.dot  rebuild.bat
backend/docs/extension_docgen/: gen.py  generated.rst
backend/docs/source/: conf.py  extensions.rst  guide.rst  index.rst  installation.rst  layer.rst  run_grapycal.rst  sub1.rst  sub2.rst  usage.rst
backend/docs/source/contribution_guide/: contribution.rst  define_a_node.rst  define_a_node_from_node.rst  examples_of_node_definition.rst  port.rst  project_overview.rst  writing_docs.rst
backend/docs/source/developer_guide/: attribute.rst  backend_app_structure.rst  controls.rst  define_a_node.rst  define_a_node_from_higher_level.rst  define_a_node_from_node.rst  developer_guide_overview.rst  examples_of_node_definition.rst  writing_docs.rst
backend/docs/source/getting_started/: basic_usage.rst  extension.rst  extensions.rst  installation.rst  run_grapycal.rst
backend/docs/source/user_manual/: builtin_nodes.rst  execution_of_graph.rst  grapycal_builtin.rst  node.rst  overview.rst
backend/scripts/: main.py  run.sh
backend/src/grapycal/: Welcome.grapycal  __init__.py  __main__.py  app.py
backend/src/grapycal/builtin_nodes/: __init__.py  arithmetic.py  functionNode.py  textInputNode.py  textOutputNode.py
backend/src/grapycal/builtin_nodes/basic/: __init__.py
backend/src/grapycal/builtin_nodes/data/: __init__.py
backend/src/grapycal/builtin_nodes/function/: __init__.py  math.py
backend/src/grapycal/builtin_nodes/interaction/: __init__.py  evalAssignNode.py  evalAssignNode_old.py  evalNode.py  execNode.py  printNode.py
backend/src/grapycal/builtin_nodes/procedural/: __init__.py  eventNode.py  forNode.py  funcDef.py  limiterNode.py  procedureNode.py
backend/src/grapycal/core/: background_runner.py  local.py  running_module.py  slash_command.py  stdout_helper.py  workspace.py
backend/src/grapycal/extension/: extension.py  extensionManager.py  extensionSearch.py  utils.py
backend/src/grapycal/extension_api/: utils.py
backend/src/grapycal/grapycal_builtin/data/: __init__.py
backend/src/grapycal/grapycal_builtin/function/: __init__.py  math.py
backend/src/grapycal/grapycal_builtin/interaction/: __init__.py  evalNode.py  execNode.py  imagePasteNode.py
backend/src/grapycal/grapycal_builtin/procedural/: __init__.py  forNode.py  funcDef.py  limiterNode.py  procedureNode.py
backend/src/grapycal/sobjects/: DVfunctionNode.py  activeNode.py  edge.py  editor.py  fileView.py  functionNode.py  node.py  port.py  settings.py  sidebar.py  simpleNode.py  sourceNode.py  workspaceObject.py
backend/src/grapycal/sobjects/controls/: __init__.py  buttonControl.py  control.py  imageControl.py  linePlotControl.py  nullControl.py  optionControl.py  textControl.py  threeControl.py
backend/src/grapycal/sobjects/nodes/: additionNode.py  arithmetic.py  functionNode.py  printNode.py  textInputNode.py
backend/src/grapycal/utils/: config.py  file.py  httpResource.py  io.py  logging.py  misc.py  nodeGen.py  usersettings.py
backend/try/: function_parser.py  note.md  object_classification.py  test.py  test_bg_runner.py  time.py
backend/try/test_python/: aaa.py  main.py  mp.py  thread.py
backend/try/test_python/prototype/: main.py
charts/: docker-compose.yaml
contribution_guide/: attribute.html  backend_app_structure.html  contribution.html  controls.html  define_a_node.html  define_a_node_from_higher_level.html  define_a_node_from_node.html  examples_of_node_definition.html  port.html  project_overview.html  writing_docs.html
docs/: v0.2.0.md
extensions/: a.py  profile.bat
extensions/grapycal_torch/: README.md  __init__.py  activation.py  basic.py  cnn.py  configureNode.py  dataloader.py  generative.py  manager.py  moduleNode.py  networkDef.py  normalize.py  optimizerNode.py  pooling.py  pyproject.toml  settings.py  tensor.py  tensor_operations.py  utils.py
frontend/: .gitignore  Dockerfile  README.md  licenses.txt  nginx.conf  package-lock.json  package.json  postbuild.py  tsconfig.json  webpack.config.js  webpack.config.service.js  webpack.config.standalone.js
getting_started/: basic_usage.html  extension.html  installation.html  (+1 more)
grapycal_builtin/: pyproject.toml  setup.cfg
grapycal_builtin/grapycal_builtin/container/: __init__.py
grapycal_builtin/grapycal_builtin/data/: __init__.py
grapycal_builtin/grapycal_builtin/function/: __init__.py  math.py
grapycal_builtin/grapycal_builtin/interaction/: __init__.py  evalNode.py  execNode.py  imagePasteNode.py
grapycal_builtin/grapycal_builtin/procedural/: __init__.py  forNode.py  funcDef.py  procedureNode.py
(+260 files in other folders)
